--- a/net/etc/rc.conf
+++ b/net/etc/rc.conf
@@ -20,12 +20,10 @@ rc_configured=YES
 
 # Add local overrides below.
 #
-hostname=netbsd
+hostname=netbsd.local
 dhcpcd=YES
 dhcpcd_flags="-qM re0"
 dhclient=no
 wscons=YES
 savcecore=no
 rpcbind=YES
-dbus=YES
-hal=no
