--- a/net/home/.i3/.i3-conkyrc
+++ b/net/home/.i3/.i3-conkyrc
@@ -13,6 +13,8 @@ override_utf8_locale no
 TEXT
 [
     { "full_text" : "  ${execi 5 ~/.i3/cmus-info} " , "color" : "\#f2f0ec" },
+    { "full_text" : "   ${execi 5 mixerctl outputs.master} " , "color" : "\#f2f0ec" },
+    { "full_text" : "  ${execi 5 ~/bin/if_ip.sh} " , "color" : "\#f2f0ec" },
     { "full_text" : "    ${kernel} " , "color" : "\#f2f0ec" },
     { "full_text" : "   ${time %a, %b %d} " , "color" : "\#f2f0ec" },
     { "full_text" : "   ${time %I:%M} " , "color" : "\#f2f0ec" },
