--- a/net/home/.i3/.i3-conkyrc
+++ b/net/home/.i3/.i3-conkyrc
@@ -1,19 +1,14 @@
-out_to_x no
-own_window no
-out_to_console yes
 background no
-max_text_width 0
-update_interval 10.0
+out_to_x no
+out_to_console yes
+update_interval 1
 total_run_times 0
-short_units yes
-if_up_strictness address
-use_spacer left
-override_utf8_locale no
+use_spacer none
 
 TEXT
 [
     { "full_text" : "  ${execi 5 ~/.i3/cmus-info} " , "color" : "\#f2f0ec" },
-    { "full_text" : "   ${execi 5 mixerctl outputs.master} " , "color" : "\#f2f0ec" },
+    { "full_text" : "   ${execi 5 mixerctl outputs.master  | sed 's/.*=//'}" , "color" : "\#f2f0ec" },
     { "full_text" : "  ${execi 5 ~/bin/if_ip.sh} " , "color" : "\#f2f0ec" },
     { "full_text" : "    ${kernel} " , "color" : "\#f2f0ec" },
     { "full_text" : "   ${time %a, %b %d} " , "color" : "\#f2f0ec" },
