--- a/free/home/.i3/config
+++ b/free/home/.i3/config
@@ -1,179 +1,157 @@
 # i3 config file (v4)
 #
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
-#
-# This config file uses keycodes (bindsym) and was written for the QWERTY
-# layout.
-#
-# To get a config file with the same key positions, but for your current
-# layout, use the i3-config-wizard
-#
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:Inconsolata for Powerline Medium 8
+font pango:Inconsolata for Powerline Regular 10
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
-
-# use these keys for focus, movement, and resize directions when reaching for
-# the arrows is not convenient
-set $up l
-set $down k
-set $left j
-set $right semicolon
-
-# use Mouse+Mod1 to drag floating windows to their wanted position
-floating_modifier Mod1
+# Use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
 
 # start a terminal
-bindsym Mod1+Return exec i3-sensible-terminal
+bindsym $mod+Return exec xterm 
 
 # kill focused window
-bindsym Mod1+Shift+q kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym Mod1+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+p exec dmenu_run -fn "-*-gohufont-*-*-*-*-14-*-*-*-*-*-*-*" -nb "#2b303b" -sb "#8fa1b3" 
+#bindsym $mod+u exec --no-startup-id passmenu --type -b -fn "Inconsolata for Powerline-12:Regular" -nb "#2b303b" -sb "#8fa1b3" -p ">>>" -hist /home/luke/.dmenuhist
+#bindsym $mod+u exec --no-startup-id passdmenu --type --user --pw -- -b -fn "Inconsolata for Powerline-12:Regular" -nb "#2b303b" -sb "#8fa1b3" -p ">>>" -hist /home/luke/.dmenuhist
 
 # change focus
-bindsym Mod1+$left focus left
-bindsym Mod1+$down focus down
-bindsym Mod1+$up focus up
-bindsym Mod1+$right focus right
-
-# alternatively, you can use the cursor keys:
-bindsym Mod1+Left focus left
-bindsym Mod1+Down focus down
-bindsym Mod1+Up focus up
-bindsym Mod1+Right focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # move focused window
-bindsym Mod1+Shift+$left move left
-bindsym Mod1+Shift+$down move down
-bindsym Mod1+Shift+$up move up
-bindsym Mod1+Shift+$right move right
-
-# alternatively, you can use the cursor keys:
-bindsym Mod1+Shift+Left move left
-bindsym Mod1+Shift+Down move down
-bindsym Mod1+Shift+Up move up
-bindsym Mod1+Shift+Right move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # split in horizontal orientation
-bindsym Mod1+h split h
+bindsym $mod+c split h
 
 # split in vertical orientation
-bindsym Mod1+v split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym Mod1+f fullscreen toggle
+bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym Mod1+s layout stacking
-bindsym Mod1+w layout tabbed
-bindsym Mod1+e layout toggle split
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym Mod1+Shift+space floating toggle
+bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym Mod1+space focus mode_toggle
+bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym Mod1+a focus parent
+bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym Mod1+d focus child
-
-# move the currently focused window to the scratchpad
-bindsym Mod1+Shift+minus move scratchpad
-
-# Show the next scratchpad window or hide the focused scratchpad window.
-# If there are multiple scratchpad windows, this command cycles through them.
-bindsym Mod1+minus scratchpad show
+bindsym $mod+d focus child
 
 # switch to workspace
-bindsym Mod1+1 workspace 1
-bindsym Mod1+2 workspace 2
-bindsym Mod1+3 workspace 3
-bindsym Mod1+4 workspace 4
-bindsym Mod1+5 workspace 5
-bindsym Mod1+6 workspace 6
-bindsym Mod1+7 workspace 7
-bindsym Mod1+8 workspace 8
-bindsym Mod1+9 workspace 9
-bindsym Mod1+0 workspace 10
+bindsym $mod+1 workspace 1:term
+bindsym $mod+2 workspace 2:edit
+bindsym $mod+3 workspace 3:media
+bindsym $mod+4 workspace 4:surf
 
 # move focused container to workspace
-bindsym Mod1+Shift+1 move container to workspace 1
-bindsym Mod1+Shift+2 move container to workspace 2
-bindsym Mod1+Shift+3 move container to workspace 3
-bindsym Mod1+Shift+4 move container to workspace 4
-bindsym Mod1+Shift+5 move container to workspace 5
-bindsym Mod1+Shift+6 move container to workspace 6
-bindsym Mod1+Shift+7 move container to workspace 7
-bindsym Mod1+Shift+8 move container to workspace 8
-bindsym Mod1+Shift+9 move container to workspace 9
-bindsym Mod1+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
 
 # reload the configuration file
-bindsym Mod1+Shift+c reload
+bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym Mod1+Shift+r restart
+bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym $left       resize shrink width 10 px or 10 ppt
-        bindsym $down       resize grow height 10 px or 10 ppt
-        bindsym $up         resize shrink height 10 px or 10 ppt
-        bindsym $right      resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left        resize shrink width 10 px or 10 ppt
-        bindsym Down        resize grow height 10 px or 10 ppt
-        bindsym Up          resize shrink height 10 px or 10 ppt
-        bindsym Right       resize grow width 10 px or 10 ppt
+        bindsym l resize shrink width 20 px or 4 ppt
+        bindsym k resize grow height 20 px or 4 ppt
+        bindsym j resize shrink height 20 px or 4 ppt
+        bindsym h resize grow width 20 px or 4 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
-bindsym Mod1+r mode "resize"
+bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        strip_workspace_numbers yes
+        position top
+        mode dock
+        status_command $HOME/.i3/i3status-conky-launcher
+        font pango:Inconsolata for Powerline Bold 10    
+        colors {
+            background #2b303b
+            focused_workspace #4c7899 #8fa1b3 #ffffff
+        }
 }
 
-#######################################################################
-# automatically start i3-config-wizard to offer the user to create a
-# keysym-based config which used their favorite modifier (alt or windows)
-#
-# i3-config-wizard will not launch if there already is a config file
-# in ~/.i3/config.
-#
-# Please remove the following exec line:
-#######################################################################
-exec i3-config-wizard
+for_window [instance="feh"] floating enable;
+for_window [instance="livestreamer-twitch-gui"] floating enable;
+for_window [instance="gpicview"] floating enable;
+for_window [instance="lxappearance"] floating enable;
+for_window [instance="mainwindow.py"] floating enable; #playonlinux
+for_window [instance="transparent-term"] move scratchpad,scratchpad show,resize shrink height 200px;
+new_window pixel
+
+# AUTOSTART
+#exec --no-startup-id compton -b --backend glx --vsync opengl-swc
+#exec --no-startup-id nm-applet
+#exec --no-startup-id autorandr --change
+#exec --no-startup-id urxvtd -q -f -o
+#exec --no-startup-id ~/.fehbg_
+ 
+for_window[class="^.*"] border pixel 1
+#gaps inner 7
+#gaps outer 4
+
+# class                 border  backgr. text    indicator
+client.focused          #4c7899 #8fa1b3 #ffffff #bf616a
+client.focused_inactive #333333 #5f676a #ffffff #484e50
+client.unfocused        #333333 #222222 #888888 #292d2e
+client.urgent           #2f343a #900000 #ffffff #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000
+
+# KEYBINDINGS
+bindsym $mod+b exec --no-startup-id SAVE_NAME=$(date +%F-%T).png && maim "$HOME/Pictures/Screenshots/$SAVE_NAME" && echo ~/Pictures/Screenshots/$SAVE_NAME
+bindsym $mod+Shift+b exec --no-startup-id SAVE_NAME=$(date +%F-%T).png && maim -s "$HOME/Pictures/Screenshots/$SAVE_NAME" && echo ~/Pictures/Screenshots/$SAVE_NAME
+bindsym $mod+Shift+q exec --no-startup-id autorandr --change
+bindsym $mod+z [urgent=latest] focus
+bindsym $mod+x exec chromium
+bindsym $mod+m exec qutebrowser
+bindsym $mod+y exec spotify
+bindsym $mod+n exec telegram
+bindsym $mod+comma exec urxvtc -name "transparent-term" -bg [55]#2b303b -depth 32
+bindsym $mod+Shift+comma exec urxvtc -name "transparent-nofloat-term" -bg [55]#2b303b -depth 32
+bindsym $mod+minus scratchpad show
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+Mod4+j exec --no-startup-id xbacklight -dec 3
+bindsym $mod+Mod4+k exec --no-startup-id xbacklight -inc 3
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% && killall -USR1 i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% && killall -USR1 i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute alsa_output.pci-0000_00_1b.0.analog-stereo toggle && killall -USR1 i3status
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+bindsym XF86AudioStop exec --no-startup-id playerctl stop
+
