--- a/net/home/.i3/config
+++ b/net/home/.i3/config
@@ -106,7 +106,7 @@ bar {
 for_window [instance="feh"] floating enable;
 new_window pixel
 
-for_window[class="^.*"] border pixel 2
+for_window[class="^.*"] border pixel 4
 #gaps inner 7
 #gaps outer 4
 
@@ -117,7 +117,7 @@ client.unfocused        #333333 #222222 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000
 
-# keybindings
+# keybindings // left for reference
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% && killall -USR1 i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% && killall -USR1 i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute alsa_output.pci-0000_00_1b.0.analog-stereo toggle && killall -USR1 i3status
