--- a/net/home/.shrc
+++ b/net/home/.shrc
@@ -15,9 +15,11 @@ alias ll='ls -laFo'
 alias l='ls -l'
 alias g='egrep -i'
 alias preview='feh -g 450x300+500+200 -R .01 --zoom fill'
-alias rec='ffmpeg2 -f x11grab -s 1440x900 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
+alias rec='ffmpeg2 -f x11grab -s 1280x800 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
+#alias rec='ffmpeg2 -f x11grab -s 1440x900 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
 alias info='nbinfo.sh'
-alias todo='vim ~/.todo'
+alias todo='vi ~/todo'
+alias rnet='sudo /etc/rc.d/network restart'
 
 # # be paranoid
 # alias cp='cp -ip'
