adds and tweaks

--- a/net/home/.shrc
+++ b/net/home/.shrc
@@ -13,7 +13,7 @@ alias p='pwd'
 alias j=jobs
 alias m=$PAGER
 alias ll='colorls -laFoG'
-alias l='colorls -lG'
+alias l='colorls -lfG'
 alias g='egrep -i'
 alias preview='feh -g 450x300+500+200 -R .01 --zoom fill'
 #alias rec='ffmpeg2 -f x11grab -s 1280x800 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
@@ -21,9 +21,9 @@ alias rec='ffmpeg2 -f x11grab -s 1440x900 -an -i :0.0 -c:v libvpx -b:v 5M -crf 1
 alias info='nbinfo.sh'
 alias todo='vi ~/todo'
 alias rnet='sudo /etc/rc.d/network restart'
+alias poweroff='sudo poweroff'
 alias zzz='xlock'
 alias shootme='scrot -cd5 ~/Pictures/scrots/scrot-$(date +%m-%d-%Y-%H-%M-%S).png'
-
 alias cp='cp -ip'
 alias mv='mv -i'
 alias rm='rm -i'
