adds and tweaks

--- a/net/home/.mkshrc
+++ b/net/home/.mkshrc
@@ -23,6 +23,7 @@ alias free='top -n 1 | head -n 5 | tail -n 2'
 alias blankf='cdrecord dev=/dev/rcd0d blank=fast'
 alias blanka='cdrecord dev=/dev/rcd0d blank=all'
 alias rip='sudo cdparanoia -g /dev/rcd0d -B'
+alias ping='ping -c2 google.com'
 
 PS1=""
  case `id -u` in
