--- a/net/home/.mkshrc
+++ b/net/home/.mkshrc
@@ -13,7 +13,7 @@ alias rec='ffmpeg2 -f x11grab -s 1440x900 -an -i :0.0 -c:v libvpx -b:v 5M -crf 1
 alias info='nbinfo.sh'
 alias todo='vi ~/todo'
 alias rnet='sudo /etc/rc.d/network restart'
-alias poweroff='sudo poweroff'
+alias shutdown='sudo shutdown -h now'
 alias zzz='xlock'
 alias shootme='DISPLAY=:0 import -window root ~/Pictures/scrots/scrot-$(date +%m-%d-%Y-%H-%M-%S).png'
 alias cp='cp -ip'
@@ -23,7 +23,6 @@ alias free='top -n 1 | head -n 5 | tail -n 2'
 alias blankf='cdrecord dev=/dev/rcd0d blank=fast'
 alias blanka='cdrecord dev=/dev/rcd0d blank=all'
 alias rip='sudo cdparanoia -g /dev/rcd0d -B'
-alias ping='ping -c2 google.com'
 
 PS1=""
  case `id -u` in
