--- a/net/home/.tmux.conf
+++ b/net/home/.tmux.conf
@@ -1,123 +1,64 @@
-# change prefix to Ctrl-a (like in gnu-screen)
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# Status update interval
+set -g status-interval 1
 
-# reload config fil
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# Basic status bar colors
+set -g status-bg black
+set -g status-fg cyan
 
-# shell
-set -g default-command /bin/sh
-set -g default-shell /bin/sh
+# Left side of status bar
+set -g status-left-bg black
+set -g status-left-fg green
+set -g status-left-length 40
+set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P"
 
-# start with window 1 (instead of 0)
-set -g base-index 1
+# Right side of status bar
+set -g status-right-bg black
+set -g status-right-fg cyan
+set -g status-right-length 40
+set -g status-right "#H #[fg=white]« #[fg=yellow]%H:%M:%S #[fg=green]%d-%b-%y"
 
-# start with pane 1
-set -g pane-base-index 1
+# Window status
+set -g window-status-format " #I:#W#F "
+set -g window-status-current-format " #I:#W#F "
 
-# screen mode
-set -g default-terminal "screen-256color"
+# Current window status
+set -g window-status-current-bg red
+set -g window-status-current-fg black
 
+# Window with activity status
+set -g window-status-activity-bg yellow # fg and bg are flipped here due to a
+set -g window-status-activity-fg black  # bug in tmux
 
-# history
-set -g history-limit 4096
+# Window separator
+set -g window-status-separator ""
 
+# Window status alignment
+set -g status-justify centre
 
-# allow terminal scrolling
-set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
+# Pane border
+set -g pane-border-bg default
+set -g pane-border-fg default
 
-# copy paste
-bind C-p run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-b run "tmux set-buffer \"$(xclip -o -sel clipboard\"; tmux paste-buffer"
+# Active pane border
+set -g pane-active-border-bg default
+set -g pane-active-border-fg green
 
-# from system clipboard to tmux
-bind-key -n C-P run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+# Pane number indicator
+set -g display-panes-colour default
+set -g display-panes-active-colour default
 
-# use vi mode
-setw -g mode-keys vi
-set -g status-keys vi
-setw -g utf8 on
+# Clock mode
+set -g clock-mode-colour red
+set -g clock-mode-style 24
 
-# use mouse in copy mode
-#set-option -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'
-setw -g mode-mouse on
-set-option -g mouse-select-pane on
+# Message
+set -g message-bg default
+set -g message-fg default
 
-# splitting
-unbind %
-bind h split-window -h
-unbind '"'
-bind v split-window -v
+# Command message
+set -g message-command-bg default
+set -g message-command-fg default
 
-# window switching
-unbind n
-bind = next-window
-bind - previous-window
-bind -n C-Right next-window
-bind -n C-Left previous-window
-set -g mouse-select-window on
-
-# colon :
-bind : command-prompt
-
-# panes
-set -g mouse-select-pane on
-set -g pane-border-fg blue 
-set -g pane-active-border-fg brightred
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-
-# toggle statusbar
-bind-key b set-option status
-
-# status line
-set -g status-utf8 on
-set -g status-justify left
-set -g status-bg default
-set -g status-fg default 
-set -g status-interval 2
-
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
-set -g automatic-rename on
-
-#window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
-
-# colors 
-setw -g window-status-format "#[bg=default]#[fg=colour7]  #W  "
-setw -g window-status-current-format "#[bg=default]#[fg=colour5]  #W  "
-setw -g window-status-current-attr dim
-set -g status-position bottom 
-set -g status-justify centre 
-set -g status-left ' '
-set -g status-right ' '
-
-# vim like bindings
-bind V send-keys "0v\$"
-bind -t vi-copy V rectangle-toggle
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind -t vi-copy 'Space' halfpage-down
-bind -t vi-copy 'Bspace' halfpage-up
-
-# chimes 
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-option -g bell-action none
-
-# tmux clock
-set -g clock-mode-colour blue
-
-# some key-binding changes
-bind x kill-pane
-bind X next-layout
-bind Z previous-layout
+# Mode
+set -g mode-bg red
+set -g mode-fg default 
