--- a/net/home/.tmux.conf
+++ b/net/home/.tmux.conf
@@ -1,64 +1,29 @@
-# Status update interval
-set -g status-interval 1
+set -g prefix ^a
+set -g status on
+set -g status-utf8 on
+set -g set-titles on
+set -g default-terminal "screen-256color"
+set -g visual-activity on
+set -g status-position bottom
+set -g monitor-activity off
+set -g pane-base-index 1
+set -g renumber-windows on
 
-# Basic status bar colors
-set -g status-bg black
-set -g status-fg cyan
+# Binds
+bind-key r source ~/.tmux.conf
 
-# Left side of status bar
-set -g status-left-bg black
-set -g status-left-fg green
-set -g status-left-length 40
-set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P"
-
-# Right side of status bar
-set -g status-right-bg black
-set -g status-right-fg cyan
-set -g status-right-length 40
-set -g status-right "#H #[fg=white]« #[fg=yellow]%H:%M:%S #[fg=green]%d-%b-%y"
-
-# Window status
-set -g window-status-format " #I:#W#F "
-set -g window-status-current-format " #I:#W#F "
-
-# Current window status
-set -g window-status-current-bg red
-set -g window-status-current-fg black
-
-# Window with activity status
-set -g window-status-activity-bg yellow # fg and bg are flipped here due to a
-set -g window-status-activity-fg black  # bug in tmux
-
-# Window separator
-set -g window-status-separator ""
-
-# Window status alignment
-set -g status-justify centre
-
-# Pane border
-set -g pane-border-bg default
-set -g pane-border-fg default
-
-# Active pane border
+# Split
+set -g pane-active-border-fg colour239
 set -g pane-active-border-bg default
-set -g pane-active-border-fg green
+set -g pane-border-fg colour239
+set -g pane-border-bg default
 
-# Pane number indicator
-set -g display-panes-colour default
-set -g display-panes-active-colour default
-
-# Clock mode
-set -g clock-mode-colour red
-set -g clock-mode-style 24
-
-# Message
-set -g message-bg default
-set -g message-fg default
-
-# Command message
-set -g message-command-bg default
-set -g message-command-fg default
-
-# Mode
-set -g mode-bg red
-set -g mode-fg default 
+# Status
+set -g status-justify right
+set -g message-fg colour7
+set -g message-bg colour235
+set -g status-left ''
+set -g status-right ''
+set -g status-bg default
+set -g window-status-format '#[fg=colour239,bold]߸߸'
+set -g window-status-current-format '#[fg=colour7,bold]߸߸' 
