--- a/net/etc/rc.conf
+++ b/net/etc/rc.conf
@@ -1,7 +1,6 @@
-
-#	$NetBSD: rc.conf,v 1.97 2014/07/14 12:29:48 mbalmer Exp $
+#	$NetBSD: rc.conf,v 1.96 2000/10/14 17:01:29 wiz Exp $
 #
-# See rc.conf(5) for more information.
+# see rc.conf(5) for more information.
 #
 # Use program=YES to enable program, NO to disable it. program_flags are
 # passed to the program on the command line.
@@ -18,12 +17,12 @@ fi
 #
 rc_configured=YES
 
-# Add local overrides below.
+# Add local overrides below
 #
-hostname=netbsd.local
+hostname=thegrill
 dhcpcd=YES
-dhcpcd_flags="-qM re0"
-dhclient=no
+dhcpcd_flags="-qM fxp0"
 wscons=YES
-savcecore=no
-rpcbind=YES
+dhclient=NO
+savecore=NO
+rtclocaltime=YES
