--- a/free/home/.dmenurc
+++ b/free/home/.dmenurc
@@ -4,9 +4,9 @@
 . $HOME/.colorrc
 
 DMENU_FN="-fn -*-terminus-*-*-*-*-16-*-*-*-*-*-*-*"
-DMENU_NB="-nb #333333"
-DMENU_NF="-nf #ffffff"
+DMENU_NB="-nb #1d1d1d"
+DMENU_NF="-nf #edf0f3"
 DMENU_SB="-sb #506070"
-DMENU_SF="-sf #ffffff"
+DMENU_SF="-sf #edf0f3"
 
 export DMENU_FN DMENU_NB DMENU_NF DMENU_SF DMENU_SB
