--- a/open/home/.wmrc
+++ b/open/home/.wmrc
@@ -1,17 +1,17 @@
 #!/bin/sh
 # ~/.wmrc
 
-FG=edf0f3
-BG=1d1d1d
+FG=f2f0ec
+BG=2d2d2d
 
-C0=1d1d1d
-C1=ca2026
-C2=379a37
-C3=f37226
-C4=7a858a
-C5=dc8cc3
-C6=4c8fce
-C7=edf0f3
+C0=2d2d2d
+C1=393939
+C2=515151
+C3=747369
+C4=a09f93
+C5=d3d0c8
+C6=e8e6df
+C7=f2f0ec
 
 export FG BG C0 C1 C2 C3 C4 C5 C6 C7
 
@@ -21,9 +21,9 @@ ICOFONT="-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
 export FONT ICOFONT
 
 DMENU_FN="-fn -*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
-DMENU_NB="-nb #1d1d1d"
-DMENU_NF="-nf #edf0f3"
-DMENU_SB="-sb #506070"
-DMENU_SF="-sf #edf0f3"
+DMENU_NB="-nb #2d2d2d"
+DMENU_NF="-nf #f2f0ec"
+DMENU_SB="-sb #a09f93"
+DMENU_SF="-sf #f2f0ec"
 
 export DMENU_FN DMENU_NB DMENU_NF DMENU_SF DMENU_SB
