adds and tweaks

--- a/open/home/.mkshrc
+++ b/open/home/.mkshrc
@@ -12,7 +12,7 @@ alias preview='feh -g 450x300+500+200 -R .01 --zoom fill'
 alias rec='ffmpeg2 -f x11grab -s 1440x900 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
 alias info='info.sh'
 alias todo='vi ~/todo'
-alias rnet='sudo /etc/rc.d/network restart'
+alias rnet='sudo sh /etc/netstart'
 alias shutdown='sudo /sbin/shutdown -p now "going down"'
 alias zzz='xlock'
 alias shootme='DISPLAY=:0 import -window root ~/Pictures/scrots/scrot-$(date +%m-%d-%Y-%H-%M-%S).png'
