--- a/open/home/.wmrc
+++ b/open/home/.wmrc
@@ -1,17 +1,17 @@
 #!/bin/sh
 # ~/.wmrc
 
-FG=c2c2b0
-BG=121212
+FG=f8f8f2
+BG=282a36
 
-C0=121212
-C1=5F8787
-C2=444444
-C3=666666
-C4=888888
-C5=999999
-C6=aaaaaa
-C7=c1c1c1
+C0=282a36
+C1=ff5555
+C2=50fa7b
+C3=f1fa8c
+C4=6272a4
+C5=bd93f9
+C6=8be9fd
+C7=f8f8f2
 
 export FG BG C0 C1 C2 C3 C4 C5 C6 C7
 
@@ -21,9 +21,9 @@ ICOFONT="-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
 export FONT ICOFONT
 
 DMENU_FN="-fn -*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
-DMENU_NB="-nb #121212"
-DMENU_NF="-nf #c2c2b0"
-DMENU_SB="-sb #5F8787"
-DMENU_SF="-sf #c2c2b0"
+DMENU_NB="-nb #282a36"
+DMENU_NF="-nf #f8f8f2"
+DMENU_SB="-sb #6272a4"
+DMENU_SF="-sf #282a36"
 
 export DMENU_FN DMENU_NB DMENU_NF DMENU_SF DMENU_SB
