--- a/open/home/.mkshrc
+++ b/open/home/.mkshrc
@@ -23,6 +23,7 @@ alias free='top -n 1 | head -n 5 | tail -n 2'
 alias blankf='cdrecord dev=/dev/rcd0d blank=fast'
 alias blanka='cdrecord dev=/dev/rcd0d blank=all'
 alias rip='sudo cdparanoia -g /dev/rcd0d -B'
+alias weather='curl -4 http://wttr.in'
 
 PS1=""
  case `id -u` in
@@ -30,26 +31,14 @@ PS1=""
  	*) PS1="${PS1}$ ";;
  esac
 
+# Colored man pages
 man() {
-	if [ "$TERM" = 'linux' ]; then
-		env \
-			LESS_TERMCAP_mb=$(printf "\e[34m") \
-			LESS_TERMCAP_md=$(printf "\e[1;31m") \
-			LESS_TERMCAP_me=$(printf "\e[0m") \
-			LESS_TERMCAP_se=$(printf "\e[0m") \
-			LESS_TERMCAP_so=$(printf "\e[30;43m") \
-			LESS_TERMCAP_ue=$(printf "\e[0m") \
-			LESS_TERMCAP_us=$(printf "\e[32m") \
-					/usr/bin/man "$@"
-	else
-		env \
-			LESS_TERMCAP_mb=$(printf "\e[1;34m") \
-			LESS_TERMCAP_md=$(printf "\e[38;5;9m") \
-			LESS_TERMCAP_me=$(printf "\e[0m") \
-			LESS_TERMCAP_se=$(printf "\e[0m") \
-			LESS_TERMCAP_so=$(printf "\e[30;43m") \
-			LESS_TERMCAP_ue=$(printf "\e[0m") \
-			LESS_TERMCAP_us=$(printf "\e[38;5;10m") \
-					/usr/bin/man "$@"
-	fi
+    env LESS_TERMCAP_mb=$'\E[01;31m' \
+    LESS_TERMCAP_md=$'\E[01;38;5;74m' \
+    LESS_TERMCAP_me=$'\E[0m' \
+    LESS_TERMCAP_se=$'\E[0m' \
+    LESS_TERMCAP_so=$'\E[38;5;246m' \
+    LESS_TERMCAP_ue=$'\E[0m' \
+    LESS_TERMCAP_us=$'\E[04;38;5;146m' \
+    man "$@"
 }
