adds and tweaks

--- a/open/home/.cwmrc
+++ b/open/home/.cwmrc
@@ -31,7 +31,7 @@ command surf   /usr/local/bin/firefox
 command lock   /usr/local/bin/slock
 
 # binds
-bind SM-Return xterm
+bind SM-Return st
 bind SM-s     status.sh
 bind SM-f     firefox
 bind SM-g     geany
@@ -39,7 +39,8 @@ bind SM-d 	  dmenu_start.sh
 bind SM-r     dmenu_soma.sh
 bind SM-x     dmenu_xset.sh
 bind SM-t     "st -e \"tmux\""
-bind 4-t      "xterm -e \"top -s 0.6\""
+bind 4-t      "st -e \"top -s 0.6\""
+bind SM-n     "st -e \"ncmpcpp\""
 
 bind 4-v      vmaximize
 bind 4-b      hmaximize
