--- a/open/home/.mkshrc
+++ b/open/home/.mkshrc
@@ -1,31 +1,41 @@
-#!/bin/mksh
+#!/bin/sh
+# ~/.mkshrc
+#
 
+alias _='doas'
+alias ..='cd ../'
+alias ...='cd ../../'
+alias ....='cd ../../../'
+alias g='git'
+alias gc='git commit -m "adds and tweaks"'
+alias mkdir='mkdir -p'
+alias cp='cp -ip'
+alias mv='mv -i'
+alias rm='rm -i'
 alias h='fc -l'
 alias p='pwd'
-alias j=jobs
-alias m=$PAGER
+alias ping='ping -c3'
+alias v='vim'
 alias ll='colorls -laFoG'
 alias l='colorls -lfG'
-alias g='egrep -i'
 alias preview='feh -g 450x300+500+200 -R .01 --zoom fill'
 #alias rec='ffmpeg2 -f x11grab -s 1280x800 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
 alias rec='ffmpeg2 -f x11grab -s 1440x900 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
 alias info='info.sh'
-alias todo='vi ~/todo'
+alias todo='vim ~/todo'
 alias rnet='sudo sh /etc/netstart'
-alias shutdown='sudo /sbin/shutdown -p now "going down"'
-alias zzz='xlock'
+alias shutdown='sudo /sbin/shutdown -p now "going down to the crossroads"'
+alias zzz='slock'
 alias shootme='DISPLAY=:0 import -window root ~/Pictures/scrots/scrot-$(date +%m-%d-%Y-%H-%M-%S).png'
-alias cp='cp -ip'
-alias mv='mv -i'
-alias rm='rm -i'
 alias free='top -n 1 | head -n 5 | tail -n 2'
 alias blankf='cdrecord dev=/dev/rcd0d blank=fast'
 alias blanka='cdrecord dev=/dev/rcd0d blank=all'
 alias rip='sudo cdparanoia -g /dev/rcd0d -B'
 alias weather='curl -4 http://wttr.in'
 alias tb='nc termbin.com 9999'
-alias gc='git commit -m "adds and tweaks"'
+alias mpv='mpv 2>/dev/null'
+alias ytdl='youtube-dl'
+
 
 PS1=""
  case `id -u` in
