--- a/open/home/.wmrc
+++ b/open/home/.wmrc
@@ -22,9 +22,9 @@ ICOFONT="-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
 export FONT ICOFONT
 
 DMENU_FN="-fn -*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
-DMENU_NB="-nb #282a36"
-DMENU_NF="-nf #f8f8f2"
-DMENU_SB="-sb #f8f8f2"
-DMENU_SF="-sf #282a36"
+DMENU_NB="-nb #f8f8f2"
+DMENU_NF="-nf #282a36"
+DMENU_SB="-sb #282a36"
+DMENU_SF="-sf #f8f8f2"
 
 export DMENU_FN DMENU_NB DMENU_NF DMENU_SF DMENU_SB
