--- a/open/home/.wmrc
+++ b/open/home/.wmrc
@@ -2,17 +2,17 @@
 # ~/.wmrc
 #
 
-FG=f8f8f2
-BG=282a36
+FG=ebdbb2
+BG=282828
 
-C0=282a36
-C1=ff5555
-C2=50fa7b
-C3=f1fa8c
-C4=6272a4
-C5=bd93f9
-C6=8be9fd
-C7=f8f8f2
+C0=282828
+C1=cc241d
+C2=98971a
+C3=d79921
+C4=458588
+C5=b16286
+C6=689d6a
+C7=a89984
 
 export FG BG C0 C1 C2 C3 C4 C5 C6 C7
 
@@ -22,9 +22,9 @@ ICOFONT="-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
 export FONT ICOFONT
 
 DMENU_FN="-fn -*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
-DMENU_NB="-nb #f8f8f2"
-DMENU_NF="-nf #282a36"
-DMENU_SB="-sb #282a36"
-DMENU_SF="-sf #f8f8f2"
+DMENU_NB="-nb #282828"
+DMENU_NF="-nf #a89984"
+DMENU_SB="-sb #a89984"
+DMENU_SF="-sf #282828"
 
 export DMENU_FN DMENU_NB DMENU_NF DMENU_SF DMENU_SB
