--- a/open/home/.tmux.conf
+++ b/open/home/.tmux.conf
@@ -1,3 +1,11 @@
+# originally
+#  ▓▓▓▓▓▓▓▓▓▓
+# ░▓ author ▓ xero <x@xero.nu>
+# ░▓ code   ▓ http://code.xero.nu/dotfiles
+# ░▓ mirror ▓ http://git.io/.files
+# ░▓▓▓▓▓▓▓▓▓▓
+# ░░░░░░░░░░
+
 # change prefix to backtick
 unbind C-b
 set-option -g prefix `
@@ -69,21 +77,21 @@ set -g status-interval 2
 
 # messaging
 set -g message-fg colour7
-set -g message-bg colour4
+set -g message-bg colour6
 set -g message-command-fg colour7
-set -g message-command-bg colour4
+set -g message-command-bg colour6
 
 # window mode
-setw -g mode-bg colour4
-setw -g mode-fg colour0
+setw -g mode-bg colour6
+setw -g mode-fg colour7
 
 # resizing
 setw -g aggressive-resize on
 
 # window status
 set-option -g status-position bottom
-setw -g window-status-format "#[bg=colour4,fg=colour7,noreverse]█ #W "
-setw -g window-status-current-format "#[bg=colour4,fg=colour7,noreverse]█ #W "
+setw -g window-status-format "#[bg=colour6,fg=colour7,noreverse]█ #W "
+setw -g window-status-current-format "#[bg=colour6,fg=colour7,noreverse]█ #W "
 
 # info on right
 set -g status-right-length 100
