--- a/open/home/.cwmrc
+++ b/open/home/.cwmrc
@@ -53,6 +53,7 @@ bind M-0      "volume.sh 0" # audio mute toggle
 bind M-minus  "volume.sh -" # audio lower
 bind M-equal  "volume.sh +" # audio raise
 bind M-u      uptime.sh
+bind M-w      cweather.sh
 
 bind 4-v      vmaximize
 bind 4-b      hmaximize
